# image-processing

./: .gitignore  README.md  docker-compose.yml  example.docker-compose.yml  example.env
api/: Dockerfile  alembic.ini  example.env  pyproject.toml
api/app/: config.py  crud.py  db.py  main.py  models.py  redis_client.py  views.py
api/migrations/: env.py
api/migrations/versions/: 2024-08-15_19-48_a86ab1a21a3d_initial_tables.py
api/mirgations/: env.py
api/mirgations/versions/: 2024-08-13_11-50_020ed6c958db_initial.py
api/src/: main.py
api/src/api/: schemas.py  views.py
api/src/core/: config.py
api/src/database/: crud.py  db.py  models.py
api/src/services/: redis_client.py
api/tests/: conftest.py  test_api.py
db_saver/: Dockerfile  alembic.ini  config.py  db.py  example.env  go.mod  main.go  main.py  models.py  pyproject.toml
db_saver/config/: config.go
db_saver/migrations/: env.py
db_saver/migrations/versions/: 2024-08-14_15-05_839490ca0fc6_initial.py
db_saver/src/: config.py  db.py  main.py
image_handler/: Dockerfile  config.py  example.env  image_processing.py  main.py  pyproject.toml
image_handler/src/: config.py  image_processing.py  main.py
